Renaming game files

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
     <script src="jquery-3.2.1.min.js"></script>
 
-    <script src="game_1.1.js"></script>
-    <script src="game_info.js"></script>
+    <script src="game_logic.js"></script>
+    <script src="game_dom_gui.js"></script>
 </body>
 
 </html>
