--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <div id="game_container">
         <canvas id="game"></canvas>
-        <br>
-        <button onclick="start();">Start</button>
+
     </div>
 
     <div class="game_info">
@@ -49,6 +48,9 @@
                 </ul>
             </div>
 
+        </div>
+<div class="start_section">
+           <button onclick="start();">Start</button>
         </div>
 
 
