FInished marking the possible movement spots

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <div class="rules">
             <h3>Rules:</h3>
             <p>For each turn, a player can move from one to three boxes (horizontally or vertically) before ending their turn (Q keyboard). If a player passes over a box containing a weapon, they leave their current weapon on site and replace it with the new one.</p>
+            <ul>
+                <li>Movement - ArrowKeys &#x2191; &#x2192; &#x2193; &#x2190;</li>
+                <li>End Round - Q key</li>
+                <li>Attack - A key</li>
+            </ul>
         </div>
         <div class="game_console">
             <h3>Game Console:</h3>
@@ -28,7 +33,7 @@
         <div class="player_info">
             <div class="player1">
                <img src="assets/p1.png" alt="Player1">
-                <h3 id="p1_turn">Player 1</h3>
+                <h3 id="p1_turn">Player1</h3>
                 <ul>
                     <li><strong>HP:</strong> <span id="p1_hp"></span></li>
                     <li><strong>Weapon:</strong> <span id="p1_weapon"></span></li>
@@ -38,7 +43,7 @@
             </div>
             <div class="player2">
                <img src="assets/p2.png" alt="Player1">
-                <h3 id="p2_turn">Player 2</h3>
+                <h3 id="p2_turn">Player2</h3>
 
                 <ul>
                     <li><strong>HP:</strong> <span id="p2_hp"></span></li>
