--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         </div>
 <div class="start_section">
-           <button onclick="start();">Start</button>
+           <button onclick="game.start();">Start</button>
         </div>
 
 
