Finished styling scroll bar and consoleOutput modification , Now on to attack function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="game_console">
             <h3>Game Console:</h3>
-            <p id="consoleOutput">You will see game instructions here</p>
+            <p id="consoleOutput"></p>
         </div>
 
         <div class="player_info">
