In the middle of defending modification

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><strong>Damage:</strong> <span id="p1_damage"></span></li>
                     <li><strong>Movement(s) left:</strong> <span id="p1_movement"></span></li>
                     <li><strong>Can Attack:</strong> <span id="p1_attack"></span></li>
-                    <li><strong><span id="p1_defendMode"></span></strong></li>
+                    <li><strong>Defend Mode: <span id="p1_defendMode"></span></strong></li>
                 </ul>
             </div>
             <div class="player2">
@@ -48,7 +48,7 @@
                     <li><strong>Damage:</strong> <span id="p2_damage"></span></li>
                     <li><strong>Movement(s) left:</strong> <span id="p2_movement"></span></li>
                     <li><strong>Can Attack:</strong> <span id="p2_attack"></span></li>
-                    <li><strong><span id="p2_defendMode"></span></strong></li>
+                    <li><strong>Defend Mode: <span id="p2_defendMode"></span></strong></li>
                 </ul>
             </div>
 
