--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
                 <li>ArrowKeys &#x2191; &#x2192; &#x2193; &#x2190; - Movement</li>
                 <li>Q key - End Round</li>
                 <li>A key - Attack </li>
-                <li>D key - Switch Attack/Defense mode</li>
             </ul>
             <h3>Rules:</h3>
             <p>For each turn, a player can move from one to three boxes (horizontally or vertically) before ending their turn (Q keyboard). If a player passes over a box containing a weapon, they leave their current weapon on site and replace it with the new one.
             <br><br>
             If player stands next to enemy, he can iniciate a battle using A key (only once per turn). There is a 50% change that player will miss when attacking.
             <br><br>
-            Players can switch from Defense mode to Attack mode and vice versa. During Defend mode, player receive 50% less damage and during Attack mode, player fight back and deal damage to enemy when attacked.
+            When Defend Mode is ON, player receive 50% less damage. When Defend Mode is OFF, player receive full enemy weapon damage. Player Defend mode is reset automatically when enemy turn ends. Player Defend Mode turn OFF when player choose to attack enemy.
             <br><br>
             As soon as the life points of a player (initially 100) falls to 0, they lose. A message appears and the game is over.
             </p>
